- Added FastSuite, FastWorkbench, and FastFurnace for performance
- Added MacCraft to help with MacOS compatibility
- Removed Medieval Music as it has been replaced by Music Triggers
- Removed Infinite Music as it is made obsolete by Music Triggers

-= Changes =-
- Updated in game Guidebook

-= Removals =-
- Removed the Honeyed Apple from Buzzier Bees as it overlapped the one from Create

---=== Version 0.2.0 ===---
IMPORTANT: Please remove any items you had in backpacks BEFORE updating as the previous backpack mod has been removed! There is a different solution for backpacks in this version.

-= Modlist Changes =-
- Added Quark Oddities. All features currently disabled except for the Backpack
- Added Curious Quark Oddities backpack
- Added Polymorph to fix problems with recipe overlap
- Added Controlling to be able to search keybinds
- Added Eclectic Trove for more variety with tooltips
- Added Embellished Stone for better Advancement Plaques
- Added Loot Integrations, JEI Integration, JER Integration, and JourneyMap Integration for compatibility
- Removed Backpacked as it was not working as intended
- Removed CraftTweaker as it was not being used

-= Additions =-
- Added a guidebook to replace the recipe book. Note that many entries are still missing, so expect this to be updated in the future!
- Added the ability to melt metal sheets into molten metal
- Added the ability to use coal products as fuel. Crushed coal will smelt 8 items, refined coal dust 1 item, and coke 12 items

-= Changes =-
- Integrated Little Logistics recipes into progression
- Integrated Chunk Loaders recipes into progression
- Changed the recipe for diamondium to require filling with more molten steel rather than lava
- Increased durability on diamond and netherite tools, and further increased the durability of iron tools
- Unified dough between create and farmer's delight. Create's dough item has been deprecated, and may be converted into farmer's delight dough in a crafting grid