@@ -2,7 +2,7 @@
 #Client-Side Integration
 [FTBChunks]
 	#Enable FTBChunks Integration
-	ftbChunks = true
+	ftbChunks = false
 	#Range: 0.0 ~ 1.0
 	claimedChunkOverlayOpacity = 0.22222299873828888
 	#Disable conflict functions for FTBChunks (MiniMap, Waypoint beam, Death waypoint)
