@@ -2,5 +2,5 @@
     "name": "Contraptions",
     "description": "",
     "icon": "create:cart_assembler",
-    "sortnum": 25
+    "sortnum": 30
 }
