@@ -2,5 +2,5 @@
     "name": "Materials Processing",
     "description": "Production of advanced materials.",
     "icon": "create:crushing_wheel",
-    "sortnum": 30
+    "sortnum": 35
 }
