@@ -2,5 +2,5 @@
     "name": "Tools of the Trade",
     "icon": "create:goggles",
     "description": "Explore the various tools available to you on your journey!",
-    "sortnum": 5
+    "sortnum": 15
 }
