@@ -1,6 +1,6 @@
 {
     "name": "Diamonds",
-    "icon": "miencraft:diamond",
+    "icon": "minecraft:diamond",
     "category": "patchouli:vanilla_changes",
     "pages": [
         {
