@@ -18,6 +18,9 @@
 -= Removals =-
 - Removed the Honeyed Apple from Buzzier Bees as it overlapped the one from Create
 
+-= Bugfixes =-
+- Fixed an issue where JourneyMap Integrations was trying to integrate with FTBChunks when FTBChunks is not present
+
 ---=== Version 0.2.0 ===---
 IMPORTANT: Please remove any items you had in backpacks BEFORE updating as the previous backpack mod has been removed! There is a different solution for backpacks in this version.
 
